add search points
