# resources/model_point_collection.go
@@ -1,0 +1,186 @@
+/*
+test
+
+example
+
+API version: 0.0.0
+*/
+
+// Code generated by OpenAPI Generator (https://openapi-generator.tech); DO NOT EDIT.
+
+package resources
+
+import (
+	"encoding/json"
+	"bytes"
+	"fmt"
+)
+
+// checks if the PointCollection type satisfies the MappedNullable interface at compile time
+var _ MappedNullable = &PointCollection{}
+
+// PointCollection struct for PointCollection
+type PointCollection struct {
+	Data []PointData `json:"data"`
+	Links LinksPagination `json:"links"`
+}
+
+type _PointCollection PointCollection
+
+// NewPointCollection instantiates a new PointCollection object
+// This constructor will assign default values to properties that have it defined,
+// and makes sure properties required by API are set, but the set of arguments
+// will change when the set of required properties is changed
+func NewPointCollection(data []PointData, links LinksPagination) *PointCollection {
+	this := PointCollection{}
+	this.Data = data
+	this.Links = links
+	return &this
+}
+
+// NewPointCollectionWithDefaults instantiates a new PointCollection object
+// This constructor will only assign default values to properties that have it defined,
+// but it doesn't guarantee that properties required by API are set
+func NewPointCollectionWithDefaults() *PointCollection {
+	this := PointCollection{}
+	return &this
+}
+
+// GetData returns the Data field value
+func (o *PointCollection) GetData() []PointData {
+	if o == nil {
+		var ret []PointData
+		return ret
+	}
+
+	return o.Data
+}
+
+// GetDataOk returns a tuple with the Data field value
+// and a boolean to check if the value has been set.
+func (o *PointCollection) GetDataOk() ([]PointData, bool) {
+	if o == nil {
+		return nil, false
+	}
+	return o.Data, true
+}
+
+// SetData sets field value
+func (o *PointCollection) SetData(v []PointData) {
+	o.Data = v
+}
+
+// GetLinks returns the Links field value
+func (o *PointCollection) GetLinks() LinksPagination {
+	if o == nil {
+		var ret LinksPagination
+		return ret
+	}
+
+	return o.Links
+}
+
+// GetLinksOk returns a tuple with the Links field value
+// and a boolean to check if the value has been set.
+func (o *PointCollection) GetLinksOk() (*LinksPagination, bool) {
+	if o == nil {
+		return nil, false
+	}
+	return &o.Links, true
+}
+
+// SetLinks sets field value
+func (o *PointCollection) SetLinks(v LinksPagination) {
+	o.Links = v
+}
+
+func (o PointCollection) MarshalJSON() ([]byte, error) {
+	toSerialize,err := o.ToMap()
+	if err != nil {
+		return []byte{}, err
+	}
+	return json.Marshal(toSerialize)
+}
+
+func (o PointCollection) ToMap() (map[string]interface{}, error) {
+	toSerialize := map[string]interface{}{}
+	toSerialize["data"] = o.Data
+	toSerialize["links"] = o.Links
+	return toSerialize, nil
+}
+
+func (o *PointCollection) UnmarshalJSON(data []byte) (err error) {
+	// This validates that all required properties are included in the JSON object
+	// by unmarshalling the object into a generic map with string keys and checking
+	// that every required field exists as a key in the generic map.
+	requiredProperties := []string{
+		"data",
+		"links",
+	}
+
+	allProperties := make(map[string]interface{})
+
+	err = json.Unmarshal(data, &allProperties)
+
+	if err != nil {
+		return err;
+	}
+
+	for _, requiredProperty := range(requiredProperties) {
+		if _, exists := allProperties[requiredProperty]; !exists {
+			return fmt.Errorf("no value given for required property %v", requiredProperty)
+		}
+	}
+
+	varPointCollection := _PointCollection{}
+
+	decoder := json.NewDecoder(bytes.NewReader(data))
+	decoder.DisallowUnknownFields()
+	err = decoder.Decode(&varPointCollection)
+
+	if err != nil {
+		return err
+	}
+
+	*o = PointCollection(varPointCollection)
+
+	return err
+}
+
+type NullablePointCollection struct {
+	value *PointCollection
+	isSet bool
+}
+
+func (v NullablePointCollection) Get() *PointCollection {
+	return v.value
+}
+
+func (v *NullablePointCollection) Set(val *PointCollection) {
+	v.value = val
+	v.isSet = true
+}
+
+func (v NullablePointCollection) IsSet() bool {
+	return v.isSet
+}
+
+func (v *NullablePointCollection) Unset() {
+	v.value = nil
+	v.isSet = false
+}
+
+func NewNullablePointCollection(val *PointCollection) *NullablePointCollection {
+	return &NullablePointCollection{value: val, isSet: true}
+}
+
+func (v NullablePointCollection) MarshalJSON() ([]byte, error) {
+	return json.Marshal(v.value)
+}
+
+func (v *NullablePointCollection) UnmarshalJSON(src []byte) error {
+	v.isSet = true
+	return json.Unmarshal(src, &v.value)
+}
+
+
