# resources/model_points_collection.go
@@ -1,0 +1,186 @@
+/*
+test
+
+example
+
+API version: 0.0.0
+*/
+
+// Code generated by OpenAPI Generator (https://openapi-generator.tech); DO NOT EDIT.
+
+package resources
+
+import (
+	"encoding/json"
+	"bytes"
+	"fmt"
+)
+
+// checks if the PointsCollection type satisfies the MappedNullable interface at compile time
+var _ MappedNullable = &PointsCollection{}
+
+// PointsCollection struct for PointsCollection
+type PointsCollection struct {
+	Data []PointData `json:"data"`
+	Links LinksPagination `json:"links"`
+}
+
+type _PointsCollection PointsCollection
+
+// NewPointsCollection instantiates a new PointsCollection object
+// This constructor will assign default values to properties that have it defined,
+// and makes sure properties required by API are set, but the set of arguments
+// will change when the set of required properties is changed
+func NewPointsCollection(data []PointData, links LinksPagination) *PointsCollection {
+	this := PointsCollection{}
+	this.Data = data
+	this.Links = links
+	return &this
+}
+
+// NewPointsCollectionWithDefaults instantiates a new PointsCollection object
+// This constructor will only assign default values to properties that have it defined,
+// but it doesn't guarantee that properties required by API are set
+func NewPointsCollectionWithDefaults() *PointsCollection {
+	this := PointsCollection{}
+	return &this
+}
+
+// GetData returns the Data field value
+func (o *PointsCollection) GetData() []PointData {
+	if o == nil {
+		var ret []PointData
+		return ret
+	}
+
+	return o.Data
+}
+
+// GetDataOk returns a tuple with the Data field value
+// and a boolean to check if the value has been set.
+func (o *PointsCollection) GetDataOk() ([]PointData, bool) {
+	if o == nil {
+		return nil, false
+	}
+	return o.Data, true
+}
+
+// SetData sets field value
+func (o *PointsCollection) SetData(v []PointData) {
+	o.Data = v
+}
+
+// GetLinks returns the Links field value
+func (o *PointsCollection) GetLinks() LinksPagination {
+	if o == nil {
+		var ret LinksPagination
+		return ret
+	}
+
+	return o.Links
+}
+
+// GetLinksOk returns a tuple with the Links field value
+// and a boolean to check if the value has been set.
+func (o *PointsCollection) GetLinksOk() (*LinksPagination, bool) {
+	if o == nil {
+		return nil, false
+	}
+	return &o.Links, true
+}
+
+// SetLinks sets field value
+func (o *PointsCollection) SetLinks(v LinksPagination) {
+	o.Links = v
+}
+
+func (o PointsCollection) MarshalJSON() ([]byte, error) {
+	toSerialize,err := o.ToMap()
+	if err != nil {
+		return []byte{}, err
+	}
+	return json.Marshal(toSerialize)
+}
+
+func (o PointsCollection) ToMap() (map[string]interface{}, error) {
+	toSerialize := map[string]interface{}{}
+	toSerialize["data"] = o.Data
+	toSerialize["links"] = o.Links
+	return toSerialize, nil
+}
+
+func (o *PointsCollection) UnmarshalJSON(data []byte) (err error) {
+	// This validates that all required properties are included in the JSON object
+	// by unmarshalling the object into a generic map with string keys and checking
+	// that every required field exists as a key in the generic map.
+	requiredProperties := []string{
+		"data",
+		"links",
+	}
+
+	allProperties := make(map[string]interface{})
+
+	err = json.Unmarshal(data, &allProperties)
+
+	if err != nil {
+		return err;
+	}
+
+	for _, requiredProperty := range(requiredProperties) {
+		if _, exists := allProperties[requiredProperty]; !exists {
+			return fmt.Errorf("no value given for required property %v", requiredProperty)
+		}
+	}
+
+	varPointsCollection := _PointsCollection{}
+
+	decoder := json.NewDecoder(bytes.NewReader(data))
+	decoder.DisallowUnknownFields()
+	err = decoder.Decode(&varPointsCollection)
+
+	if err != nil {
+		return err
+	}
+
+	*o = PointsCollection(varPointsCollection)
+
+	return err
+}
+
+type NullablePointsCollection struct {
+	value *PointsCollection
+	isSet bool
+}
+
+func (v NullablePointsCollection) Get() *PointsCollection {
+	return v.value
+}
+
+func (v *NullablePointsCollection) Set(val *PointsCollection) {
+	v.value = val
+	v.isSet = true
+}
+
+func (v NullablePointsCollection) IsSet() bool {
+	return v.isSet
+}
+
+func (v *NullablePointsCollection) Unset() {
+	v.value = nil
+	v.isSet = false
+}
+
+func NewNullablePointsCollection(val *PointsCollection) *NullablePointsCollection {
+	return &NullablePointsCollection{value: val, isSet: true}
+}
+
+func (v NullablePointsCollection) MarshalJSON() ([]byte, error) {
+	return json.Marshal(v.value)
+}
+
+func (v *NullablePointsCollection) UnmarshalJSON(src []byte) error {
+	v.isSet = true
+	return json.Unmarshal(src, &v.value)
+}
+
+
